# quadtreeBoids

./: Cargo.toml  README.md  analysis-e.py  analysis.py  boid.js  checkpoint.json  checkpoint600.json  checkpoint700.json  checkpoint800.json  data_quadtree.json  index.html  main.js  package-lock.json  package.json  quadtree.js  rect.js  style.css
profiler/: boid.js  index.html  main.js  p5.min.js  profiler.js  quadtree.js
profiler-test/: README.md  index.html  profiler-boid.js  profiler-quadtree.js  profiler-test.js  profiler.js
src/: allocator.rs  boid.rs  main.rs  pipeline.rs  quadtree.rs  shaders.rs  simulation.rs  texture.rs
src/shaders/: boid.glsl  boidFrag.glsl  boidVert.glsl  frag.glsl
