[package]
name = "quadtreeBoids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
image = "0.24.6"
pod = "0.5.0"
rand = "0.8.5"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.3"
